[metadata]
name = heic2rgb
description = Converts the main image of a HEIC file to raw RGB pixels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sk-zk/heic2rgb
author = sk-zk
author_email = /
license = Apache 2.0
license_files = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Graphics :: Graphics Conversion
project_urls =
    Bug Tracker = https://github.com/sk-zk/heic2rgb/issues
    Discussions = https://github.com/sk-zk/heic2rgb/discussions
    Changelog = https://github.com/sk-zk/heic2rgb/releases

[options]
install_requires =
    typing-extensions>=3.7;python_version<'3.8'
python_requires = >=3.7

[options.extras_require]
dev =
    pytest>=6
    pytest-cov>=3
docs =
    Sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
test =
    pytest>=6
    pytest-cov>=3
